# trt_flash_attention

./: CMakeLists.txt  README.md
include/: fmha.h  sharedCubinLoader.h
include/trt_flash_attention/: fmha_flash_attention.h
src/: cudaDriverWrapper.cpp  fmha.cpp
